--- a/VideoRental/Views/Customers/Details.cshtml
+++ b/VideoRental/Views/Customers/Details.cshtml
@@ -4,9 +4,9 @@
 <ul>
 	<li>Memebership Type : @Model.MembershipType.Name</li>
 
-	@if (!@Model.BirthDate)
+	@if(@Model.BirthDate.HasValue)
 	{
-		<li>@Model.BirthDate</li>
+		<li>Birth Date : @Model.BirthDate.Value.ToShortDateString().ToString()</li>
 	}
 </ul>
 
